refactor: builder 수정